--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
   "name": "Calculator",
-  "short_name": "Calculator",
+  "short_name": "Calc",
   "start_url":
-"https://mstefancich.github.io/calculator/",
+"https://jurian24.github.io/calculator/",
   "background_color": "#6dcdb1",
   "theme_color": "#009578",
   "display": "standalone",
   "icons": [
     {
-      "src": " images/logo192.png",
+      "src": " icons/rekenmachine.png",
       "sizes": "192x192",
       "type": "image/png"
     }
